--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -396,9 +396,6 @@ en:
       contact_information:
         email: Business e-mail
         username: Contact username
-      max_toot_chars:
-        desc_html: Set maximum toot length
-        title: Max Toot Size
       custom_css:
         desc_html: Modify the look with CSS loaded on every page
         title: Custom CSS
@@ -414,6 +411,9 @@ en:
       max_toot_chars:
         desc_html: Set maximum toot length
         title: Max Toot Size
+      nodeinfo_show_blocks:
+	        desc_html: List instance suspends, silence and rejects in the public nodeinfo API
+	        title: Enable showing blocks in nodeinfo API
       peers_api_enabled:
         desc_html: Domain names this server has encountered in the fediverse
         title: Publish list of discovered servers
